--- a/coverage_data/taskman.backend.importexport/.classes/XmlObject.html
+++ b/coverage_data/taskman.backend.importexport/.classes/XmlObject.html
@@ -95,10 +95,10 @@
 <i>21</i>&nbsp;	private XStream xstream;
 <i>22</i>&nbsp;
 <i>23</i>&nbsp;	/**
-<i>24</i>&nbsp;	 * creates a new xml object with given user manager, project organizer and resource manager
+<i>24</i>&nbsp;	 * creates a new xml object with given user userManager, project organizer and resource userManager
 <i>25</i>&nbsp;	 * @param projectOrganizer the projectOrganizer to add to the xml file
-<i>26</i>&nbsp;	 * @param userManager the user manager to add to the file
-<i>27</i>&nbsp;	 * @param resourceManager the resource manager to add to the file
+<i>26</i>&nbsp;	 * @param userManager the user userManager to add to the file
+<i>27</i>&nbsp;	 * @param resourceManager the resource userManager to add to the file
 <i>28</i>&nbsp;	 * @param clock the clock to add to the file
 <i>29</i>&nbsp;	 * @throws IllegalArgumentException when one of the parameters is null
 <i>30</i>&nbsp;	 * @post a new XMLObject is created with the given parameters
@@ -114,7 +114,7 @@
 <b class="fc"><i>40</i>&nbsp;	}</b>
 <i>41</i>&nbsp;	
 <i>42</i>&nbsp;	/**
-<i>43</i>&nbsp;	 * represents the resource manager
+<i>43</i>&nbsp;	 * represents the resource userManager
 <i>44</i>&nbsp;	 */
 <i>45</i>&nbsp;	private final ResourceManager resourceManager;
 <i>46</i>&nbsp;	
@@ -126,7 +126,7 @@
 <i>52</i>&nbsp;	}
 <i>53</i>&nbsp;
 <i>54</i>&nbsp;	/**
-<i>55</i>&nbsp;	 * represents the user manager
+<i>55</i>&nbsp;	 * represents the user userManager
 <i>56</i>&nbsp;	 */
 <i>57</i>&nbsp;	private final UserManager userManager;
 <i>58</i>&nbsp;	
