--- a/coverage_data/taskman.backend.project/.classes/Project.html
+++ b/coverage_data/taskman.backend.project/.classes/Project.html
@@ -79,7 +79,7 @@
 <i>5</i>&nbsp;import taskman.backend.task.Task;
 <i>6</i>&nbsp;import taskman.backend.user.Developer;
 <i>7</i>&nbsp;import taskman.backend.user.OperationNotPermittedException;
-<i>8</i>&nbsp;import taskman.backend.user.ProjectManager;
+<i>8</i>&nbsp;import taskman.backend.user.Manager;
 <i>9</i>&nbsp;import taskman.backend.user.User;
 <i>10</i>&nbsp;import taskman.backend.wrappers.ProjectWrapper;
 <i>11</i>&nbsp;
