--- a/coverage_data/taskman.backend.resource/.classes/ResourceManager.html
+++ b/coverage_data/taskman.backend.resource/.classes/ResourceManager.html
@@ -121,7 +121,7 @@
 <i>21</i>&nbsp;    // TODO: duration en starttime samenvoegen in timespan!!!
 <i>22</i>&nbsp;
 <i>23</i>&nbsp;    /**
-<i>24</i>&nbsp;     * Construct an empty resource manager.
+<i>24</i>&nbsp;     * Construct an empty resource userManager.
 <i>25</i>&nbsp;     *
 <i>26</i>&nbsp;     * @post the set of resource types is set to a new HashsSet and the list of constraints is set to a new Arraylist
 <i>27</i>&nbsp;     */
@@ -203,7 +203,7 @@
 <i>103</i>&nbsp;     * Creates a constraint from a given string.
 <i>104</i>&nbsp;     *
 <i>105</i>&nbsp;     * @param string a string which represents a constraint
-<i>106</i>&nbsp;     * @post adds a constraint to the resource manager
+<i>106</i>&nbsp;     * @post adds a constraint to the resource userManager
 <i>107</i>&nbsp;     * @throws IllegalArgumentException if the string does not represent a valid constraint
 <i>108</i>&nbsp;     * @throws NumberFormatException if a number in the string cannot be parsed to an integer
 <i>109</i>&nbsp;     */
