--- a/coverage_data/taskman.backend.task/.classes/TaskState.html
+++ b/coverage_data/taskman.backend.task/.classes/TaskState.html
@@ -190,7 +190,7 @@
 <i>116</i>&nbsp;    /**
 <i>117</i>&nbsp;     * Adds the given requirement to the requirements of the given task.
 <i>118</i>&nbsp;     *
-<i>119</i>&nbsp;     * @param resourceManager the resource manager of the system
+<i>119</i>&nbsp;     * @param resourceManager the resource userManager of the system
 <i>120</i>&nbsp;     * @param task the task to add the requirement to its requirements
 <i>121</i>&nbsp;     * @param resourceType the resource type of the requirement
 <i>122</i>&nbsp;     * @param amount the amount of the requirement
@@ -203,7 +203,7 @@
 <i>129</i>&nbsp;
 <i>130</i>&nbsp;    /**
 <i>131</i>&nbsp;     * Returns if the planned task is available.
-<i>132</i>&nbsp;     * @param resourceManager a resource manager.
+<i>132</i>&nbsp;     * @param resourceManager a resource userManager.
 <i>133</i>&nbsp;     * @param task a task.
 <i>134</i>&nbsp;     * @param startTime a start time.
 <i>135</i>&nbsp;     * @return true if the planned task is available, otherwise false
@@ -223,7 +223,7 @@
 <i>149</i>&nbsp;    /**
 <i>150</i>&nbsp;     * Initializes a plan for this state.
 <i>151</i>&nbsp;     * @param task a task.
-<i>152</i>&nbsp;     * @param resourceManager a resource manager.
+<i>152</i>&nbsp;     * @param resourceManager a resource userManager.
 <i>153</i>&nbsp;     * @param startTime the start time for the plan.
 <i>154</i>&nbsp;     * @throws IllegalStateException if the state is not unavailable.
 <i>155</i>&nbsp;     */
@@ -243,7 +243,7 @@
 <i>169</i>&nbsp;
 <i>170</i>&nbsp;    /**
 <i>171</i>&nbsp;     * Returns a list of resources as alternatives for the given resource.
-<i>172</i>&nbsp;     * @param resourceManager a resource manager.
+<i>172</i>&nbsp;     * @param resourceManager a resource userManager.
 <i>173</i>&nbsp;     * @param task a task.
 <i>174</i>&nbsp;     * @param resource a resource wrapper to search alternatives for.
 <i>175</i>&nbsp;     * @return a list of resources as alternatives for the given resource.
