--- a/coverage_data/taskman.backend.task/.classes/TaskStatePlanned.html
+++ b/coverage_data/taskman.backend.task/.classes/TaskStatePlanned.html
@@ -118,7 +118,7 @@
 <i>44</i>&nbsp;
 <i>45</i>&nbsp;	/**
 <i>46</i>&nbsp;	 * Returns a list of resources as alternatives for the given resource.
-<i>47</i>&nbsp;	 * @param resourceManager a resource manager.
+<i>47</i>&nbsp;	 * @param resourceManager a resource userManager.
 <i>48</i>&nbsp;	 * @param task a task.
 <i>49</i>&nbsp;	 * @param resource a resource wrapper to search alternatives for.
 <i>50</i>&nbsp;	 * @return a list of resources as alternatives for the given resource.
@@ -168,7 +168,7 @@
 <i>94</i>&nbsp;
 <i>95</i>&nbsp;	/**
 <i>96</i>&nbsp;	 * Returns if the planned task is available.
-<i>97</i>&nbsp;	 * @param resourceManager a resource manager.
+<i>97</i>&nbsp;	 * @param resourceManager a resource userManager.
 <i>98</i>&nbsp;	 * @param task a task.
 <i>99</i>&nbsp;	 * @param startTime a start time.
 <i>100</i>&nbsp;	 * @return true if the planned task is available, otherwise false
