--- a/coverage_data/taskman.backend.task/.classes/TaskStateUnavailable.html
+++ b/coverage_data/taskman.backend.task/.classes/TaskStateUnavailable.html
@@ -123,7 +123,7 @@
 <i>49</i>&nbsp;    /**
 <i>50</i>&nbsp;     * Adds the given requirement to the task its requirements.
 <i>51</i>&nbsp;     *
-<i>52</i>&nbsp;     * @param resourceManager the resource manager of the system
+<i>52</i>&nbsp;     * @param resourceManager the resource userManager of the system
 <i>53</i>&nbsp;     * @param task the task to add the requirement to its requirements
 <i>54</i>&nbsp;     * @param resourceType the resource type of the requirement
 <i>55</i>&nbsp;     * @param amount the amount of the requirement
@@ -138,7 +138,7 @@
 <i>64</i>&nbsp;    /**
 <i>65</i>&nbsp;     * Initializes a plan for this task.
 <i>66</i>&nbsp;     * @param task a task.
-<i>67</i>&nbsp;     * @param resourceManager a resource manager.
+<i>67</i>&nbsp;     * @param resourceManager a resource userManager.
 <i>68</i>&nbsp;     * @param startTime the start time for the plan.
 <i>69</i>&nbsp;     */
 <i>70</i>&nbsp;    public void initializePlan(Task task, ResourceManager resourceManager, LocalDateTime startTime) {
