--- a/coverage_data/taskman.backend/.classes/Controller.html
+++ b/coverage_data/taskman.backend/.classes/Controller.html
@@ -116,12 +116,12 @@
 <i>42</i>&nbsp;    private ProjectOrganizer projectOrganizer;
 <i>43</i>&nbsp;    
 <i>44</i>&nbsp;    /**
-<i>45</i>&nbsp;     * represents the resource manager
+<i>45</i>&nbsp;     * represents the resource userManager
 <i>46</i>&nbsp;     */
 <i>47</i>&nbsp;    private ResourceManager resourceManager;
 <i>48</i>&nbsp;    
 <i>49</i>&nbsp;    /**
-<i>50</i>&nbsp;     * represents the simulation manager
+<i>50</i>&nbsp;     * represents the simulation userManager
 <i>51</i>&nbsp;     */
 <i>52</i>&nbsp;    private SimulationManager simulationManager;
 <i>53</i>&nbsp;
@@ -515,7 +515,7 @@
 <b class="fc"><i>441</i>&nbsp;	}</b>
 <i>442</i>&nbsp;
 <i>443</i>&nbsp;	/**
-<i>444</i>&nbsp;	 * sets the user manager to the given user manager
+<i>444</i>&nbsp;	 * sets the user userManager to the given user userManager
 <i>445</i>&nbsp;	 * @param userManager the userManager of the controller
 <i>446</i>&nbsp;	 */
 <i>447</i>&nbsp;	private void setUserManager(UserManager userManager) {
@@ -531,7 +531,7 @@
 <b class="fc"><i>457</i>&nbsp;	}</b>
 <i>458</i>&nbsp;
 <i>459</i>&nbsp;	/**
-<i>460</i>&nbsp;	 * sets the resourcemanager to the given resource manager
+<i>460</i>&nbsp;	 * sets the resourcemanager to the given resource userManager
 <i>461</i>&nbsp;	 * @param resourceManager the resourceManager of the controller
 <i>462</i>&nbsp;	 */
 <i>463</i>&nbsp;	private void setResourceManager(ResourceManager resourceManager) {
