--- a/coverage_data/taskman.frontend/.classes/UserInterface.html
+++ b/coverage_data/taskman.frontend/.classes/UserInterface.html
@@ -114,7 +114,7 @@
 <i>40</i>&nbsp;	public void start() {
 <i>41</i>&nbsp;
 <i>42</i>&nbsp;		// Create default user
-<b class="fc"><i>43</i>&nbsp;		controller.createUser(&quot;admin&quot;, &quot;admin&quot;, &quot;project manager&quot;, null);</b>
+<b class="fc"><i>43</i>&nbsp;		controller.createUser(&quot;admin&quot;, &quot;admin&quot;, &quot;project userManager&quot;, null);</b>
 <i>44</i>&nbsp;
 <i>45</i>&nbsp;		// Show start menu
 <i>46</i>&nbsp;		try {
