--- a/coverage_data/test.backend.project/.classes/ProjectManagerTest.html
+++ b/coverage_data/test.backend.project/.classes/ProjectManagerTest.html
@@ -76,7 +76,7 @@
 <i>2</i>&nbsp;
 <i>3</i>&nbsp;import org.junit.Before;
 <i>4</i>&nbsp;import org.junit.Test;
-<i>5</i>&nbsp;import taskman.backend.user.ProjectManager;
+<i>5</i>&nbsp;import taskman.backend.user.Manager;
 <i>6</i>&nbsp;
 <i>7</i>&nbsp;import static org.junit.Assert.assertEquals;
 <i>8</i>&nbsp;
