--- a/coverage_data/test.backend.project/.classes/ProjectOrganizerTest.html
+++ b/coverage_data/test.backend.project/.classes/ProjectOrganizerTest.html
@@ -84,7 +84,7 @@
 <i>10</i>&nbsp;
 <i>11</i>&nbsp;import taskman.backend.project.Project;
 <i>12</i>&nbsp;import taskman.backend.project.ProjectOrganizer;
-<i>13</i>&nbsp;import taskman.backend.user.ProjectManager;
+<i>13</i>&nbsp;import taskman.backend.user.Manager;
 <i>14</i>&nbsp;
 <b class="fc"><i>15</i>&nbsp;public class ProjectOrganizerTest {</b>
 <i>16</i>&nbsp;	private ProjectOrganizer organizer;
