--- a/coverage_data/test.backend.project/.classes/ProjectTest.html
+++ b/coverage_data/test.backend.project/.classes/ProjectTest.html
@@ -91,7 +91,7 @@
 <i>17</i>&nbsp;import taskman.backend.task.Task;
 <i>18</i>&nbsp;import taskman.backend.user.Developer;
 <i>19</i>&nbsp;import taskman.backend.user.OperationNotPermittedException;
-<i>20</i>&nbsp;import taskman.backend.user.ProjectManager;
+<i>20</i>&nbsp;import taskman.backend.user.Manager;
 <i>21</i>&nbsp;import taskman.backend.user.User;
 <i>22</i>&nbsp;
 <i>23</i>&nbsp;
