--- a/coverage_data/test.backend.resource/.classes/ResourceManagerTest.html
+++ b/coverage_data/test.backend.resource/.classes/ResourceManagerTest.html
@@ -83,7 +83,7 @@
 <i>9</i>&nbsp;import taskman.backend.time.AvailabilityPeriod;
 <i>10</i>&nbsp;import taskman.backend.time.TimeSpan;
 <i>11</i>&nbsp;import taskman.backend.user.Developer;
-<i>12</i>&nbsp;import taskman.backend.user.ProjectManager;
+<i>12</i>&nbsp;import taskman.backend.user.Manager;
 <i>13</i>&nbsp;
 <i>14</i>&nbsp;import java.time.LocalDateTime;
 <i>15</i>&nbsp;import java.time.LocalTime;
