--- a/coverage_data/test.backend.task/.classes/TaskTest.html
+++ b/coverage_data/test.backend.task/.classes/TaskTest.html
@@ -623,7 +623,7 @@
 <i>10</i>&nbsp;import taskman.backend.task.*;
 <i>11</i>&nbsp;import taskman.backend.time.TimeSpan;
 <i>12</i>&nbsp;import taskman.backend.user.Developer;
-<i>13</i>&nbsp;import taskman.backend.user.ProjectManager;
+<i>13</i>&nbsp;import taskman.backend.user.Manager;
 <i>14</i>&nbsp;import taskman.backend.user.User;
 <i>15</i>&nbsp;
 <i>16</i>&nbsp;import java.time.LocalDate;
