--- a/coverage_data/test.backend.user/.classes/UserManagerTest.html
+++ b/coverage_data/test.backend.user/.classes/UserManagerTest.html
@@ -109,7 +109,7 @@
 <i>35</i>&nbsp;
 <i>36</i>&nbsp;	@Test
 <i>37</i>&nbsp;	public void testCreateProjectManager() {
-<b class="fc"><i>38</i>&nbsp;		u.createUser(&quot;test&quot;, &quot;myPassword&quot;, &quot;project manager&quot;, null, resourceManager);</b>
+<b class="fc"><i>38</i>&nbsp;		u.createUser(&quot;test&quot;, &quot;myPassword&quot;, &quot;project userManager&quot;, null, resourceManager);</b>
 <b class="fc"><i>39</i>&nbsp;		u.login(&quot;test&quot;, &quot;myPassword&quot;);</b>
 <b class="fc"><i>40</i>&nbsp;		assertEquals(&quot;test&quot;, u.getCurrentUser().getName());</b>
 <b class="fc"><i>41</i>&nbsp;		assertEquals(&quot;myPassword&quot;, u.getCurrentUser().getPassword());</b>
