--- a/coverage_data/test.frontend/.classes/CreateProjectUseCaseTest.html
+++ b/coverage_data/test.frontend/.classes/CreateProjectUseCaseTest.html
@@ -109,7 +109,7 @@
 <b class="fc"><i>35</i>&nbsp;		sm = new SimulationManager();</b>
 <b class="fc"><i>36</i>&nbsp;		clock = new Clock();</b>
 <b class="fc"><i>37</i>&nbsp;		c = new Controller(clock, um, po, rm, sm);</b>
-<b class="fc"><i>38</i>&nbsp;		um.createUser(&quot;test&quot;, &quot;test&quot;, &quot;project manager&quot;, null, rm);</b>
+<b class="fc"><i>38</i>&nbsp;		um.createUser(&quot;test&quot;, &quot;test&quot;, &quot;project userManager&quot;, null, rm);</b>
 <b class="fc"><i>39</i>&nbsp;		c.login(&quot;test&quot;, &quot;test&quot;);</b>
 <b class="fc"><i>40</i>&nbsp;		ui = new UserInterface(c);</b>
 <b class="fc"><i>41</i>&nbsp;		outputStream = new ByteArrayOutputStream();</b>
