--- a/coverage_data/test.backend.importExport/.classes/XmlObjectTest.html
+++ b/coverage_data/test.backend.importExport/.classes/XmlObjectTest.html
@@ -125,7 +125,7 @@
 <i>51</i>&nbsp;
 <i>52</i>&nbsp;	@Test
 <i>53</i>&nbsp;	public void testToXMLString() {
-<b class="fc"><i>54</i>&nbsp;		controller.createUser(&quot;test&quot;, &quot;test&quot;, &quot;project manager&quot;, null);</b>
+<b class="fc"><i>54</i>&nbsp;		controller.createUser(&quot;test&quot;, &quot;test&quot;, &quot;project userManager&quot;, null);</b>
 <b class="fc"><i>55</i>&nbsp;		controller.login(&quot;test&quot;, &quot;test&quot;);</b>
 <b class="fc"><i>56</i>&nbsp;		LocalDateTime creationTime = LocalDateTime.of(2018, Month.JULY, 26, 0, 0);</b>
 <b class="fc"><i>57</i>&nbsp;		LocalDateTime dueTime = LocalDateTime.of(2018, Month.JULY, 26, 23, 0);</b>
@@ -158,7 +158,7 @@
 <i>84</i>&nbsp;
 <i>85</i>&nbsp;	@Test
 <i>86</i>&nbsp;	public void testFromXMLString() {
-<b class="fc"><i>87</i>&nbsp;		controller.createUser(&quot;test&quot;, &quot;test&quot;, &quot;project manager&quot;, null);</b>
+<b class="fc"><i>87</i>&nbsp;		controller.createUser(&quot;test&quot;, &quot;test&quot;, &quot;project userManager&quot;, null);</b>
 <b class="fc"><i>88</i>&nbsp;		controller.login(&quot;test&quot;, &quot;test&quot;);</b>
 <b class="fc"><i>89</i>&nbsp;		LocalDateTime creationTime = LocalDateTime.of(2018, Month.JULY, 26, 0, 0);</b>
 <b class="fc"><i>90</i>&nbsp;		LocalDateTime dueTime = LocalDateTime.of(2018, Month.JULY, 26, 23, 0);</b>
