--- a/coverage_data/test.frontend/.classes/UpdateStatusUseCaseTest.html
+++ b/coverage_data/test.frontend/.classes/UpdateStatusUseCaseTest.html
@@ -115,7 +115,7 @@
 <b class="fc"><i>41</i>&nbsp;		clock = new Clock();</b>
 <b class="fc"><i>42</i>&nbsp;		c = new Controller(clock, um, po, rm, sm);</b>
 <b class="fc"><i>43</i>&nbsp;		um.createUser(&quot;test&quot;, &quot;test&quot;, &quot;developer&quot;, LocalTime.of(12, 0), rm);</b>
-<b class="fc"><i>44</i>&nbsp;		um.createUser(&quot;admin2&quot;, &quot;admin&quot;, &quot;project manager&quot;, null, rm);</b>
+<b class="fc"><i>44</i>&nbsp;		um.createUser(&quot;admin2&quot;, &quot;admin&quot;, &quot;project userManager&quot;, null, rm);</b>
 <b class="fc"><i>45</i>&nbsp;		c.login(&quot;admin2&quot;, &quot;admin&quot;);</b>
 <b class="fc"><i>46</i>&nbsp;		LocalDateTime creationTime = LocalDateTime.of(2018, Month.JULY, 26, 8, 0);</b>
 <b class="fc"><i>47</i>&nbsp;		c.createProject(&quot;testProject&quot;, &quot;testDescription&quot;, creationTime);</b>
